Delete @modules